[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ddgs>=9.9.0",
    "duckduckgo-search>=8.1.1",
    "geopandas>=1.1.1",
    "gradio",
    "huggingface-hub>=1.1.2",
    "kaleido>=1.2.0",
    "langfuse>=3.9.1",
    "litellm>=1.79.3",
    "matplotlib>=3.10.7",
    "openinference-instrumentation-smolagents>=0.1.19",
    "opentelemetry-exporter-otlp>=1.38.0",
    "opentelemetry-sdk>=1.38.0",
    "plotly>=6.4.0",
    "shapely>=2.1.2",
    "smolagents[litellm]>=1.22.0",
]
